# tree-sitter-tsql

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  shell.nix
.plan/: batchIssue.md
bindings/c/: tree-sitter-TSQL.pc.in  tree-sitter-tsql.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
docs/roadmap/: Makefile  index.html  roadmap.m4  roadmap.md
grammar/: builtins.js  data_types.js  precedences.js  utils.js
grammar/functions/: aggregate_functions.js  analytic_windowed_functions.js  bit_manipulation_functions.js  collation_functions.js  configuration_functions.js  conversion_functions.js  odbc_scalar_functions.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: aggregate_functions.txt  aggregate_windowed_function.txt  all_distinct_expression.txt  analytic_windowed_function.txt  another_statement.txt  as_column_alias.txt  assignment_operator.txt  batch.txt  bit_manipulation_functions.txt  built_in_functions.txt  cfl_statement.txt  collation_functions.txt  column_alias.txt  comment.txt  configuration_functions.txt  conversion_functions.txt  create_or_alter_procedure.txt  data_type.txt  delete_statement.txt  dollar_partition.txt  execute_body.txt  execute_option.txt  execute_parameter.txt  execute_statement_arg.txt  execute_var_string.txt  expression.txt  expression_elem.txt  expression_list.txt  freetext_function.txt  func_proc_name_server_database_schema.txt  go.txt  (+24 more)
(+96 files in other folders)
